--- a/apps/pxweb2/src/app/components/NavigationDrawer/NavigationDrawer.module.scss
+++ b/apps/pxweb2/src/app/components/NavigationDrawer/NavigationDrawer.module.scss
@@ -71,11 +71,11 @@
   border-radius: var(--px-border-radius-none);
   background: var(--px-color-background-subtle);
   overflow-y: auto;
-  height: 100%;
+  // height: 100%;
   
   @media (min-width: fixed.$breakpoints-xsmall-min-width) and (max-width: fixed.$breakpoints-xsmall-max-width) {
     width: 380px;
-    //height: 100vh;
+    height: 100vh;
     padding: fixed.$spacing-6;
     border-radius: var(--px-border-radius-none) var(--px-border-radius-xlarge) var(--px-border-radius-xlarge) var(--px-border-radius-none);
     position: absolute; // Micke extra
@@ -85,7 +85,7 @@
 
   @media (min-width: fixed.$breakpoints-small-min-width) and (max-width: fixed.$breakpoints-small-max-width) {
     width: 380px;
-    //height: 100vh;
+    height: 100vh;
     padding: fixed.$spacing-6;
     border-radius: var(--px-border-radius-none) var(--px-border-radius-xlarge) var(--px-border-radius-xlarge) var(--px-border-radius-none);
     position: absolute; // Micke extra
